chore: optimize security configuration